src/main/js/antlr/F7Parser.js
// Generated from F7.g4 by ANTLR 4.7.2
// jshint ignore: start
var antlr4 = require("antlr4/index");
var F7Listener = require("./F7Listener").F7Listener;
var F7Visitor = require("./F7Visitor").F7Visitor;

var grammarFileName = "F7.g4";


var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map(function (ds, index) {
  return new antlr4.dfa.DFA(ds, index);
});

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [null, null, "'.'"];

var symbolicNames = [
  null,
  "NCharacters",
  "Dot",
  "Int",
  "Number",
  "SingleQuoteString",
  "String",
  "Error",
  "LeftParen",
  "RightParen",
  "LeftBrace",
  "RightBrace",
  "Comma",
  "Colon",
  "SemiColon",
  "Bang",
  "Plus",
  "Minus",
  "Percent",
  "Power",
  "Divide",
  "Multiply",
  "GreaterThan",
  "GreaterThanOrEqualTo",
  "LessThan",
  "LessThanOrEqualTO",
  "Equal",
  "NotEqual",
  "Ampersand",
  "Dollar",
  "Underscore",
  "WS",
];

var ruleNames = [
  "start",
  "block",
  "expression",
  "atom",
  "range",
  "biRange",
  "uniRange",
  "columnWiseBiRange",
  "columnWiseWithRowOffsetFirstBiRange",
  "columnWiseWithRowOffsetLastBiRange",
  "rowWiseBiRange",
  "rowWiseWithColumnOffsetFirstBiRange",
  "rowWiseWithColumnOffsetLastBiRange",
  "arguments",
  "gridName",
  "identifier",
  "comparisonOperator",
];

function F7Parser(input) {
  antlr4.Parser.call(this, input);
  this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
  this.ruleNames = ruleNames;
  this.literalNames = literalNames;
  this.symbolicNames = symbolicNames;
  return this;
}

F7Parser.prototype = Object.create(antlr4.Parser.prototype);
F7Parser.prototype.constructor = F7Parser;

Object.defineProperty(F7Parser.prototype, "atn", {
  get: function () {
    return atn;
  },
});

F7Parser.EOF = antlr4.Token.EOF;
F7Parser.NCharacters = 1;
F7Parser.Dot = 2;
F7Parser.Int = 3;
F7Parser.Number = 4;
F7Parser.SingleQuoteString = 5;
F7Parser.String = 6;
F7Parser.Error = 7;
F7Parser.LeftParen = 8;
F7Parser.RightParen = 9;
F7Parser.LeftBrace = 10;
F7Parser.RightBrace = 11;
F7Parser.Comma = 12;
F7Parser.Colon = 13;
F7Parser.SemiColon = 14;
F7Parser.Bang = 15;
F7Parser.Plus = 16;
F7Parser.Minus = 17;
F7Parser.Percent = 18;
F7Parser.Power = 19;
F7Parser.Divide = 20;
F7Parser.Multiply = 21;
F7Parser.GreaterThan = 22;
F7Parser.GreaterThanOrEqualTo = 23;
F7Parser.LessThan = 24;
F7Parser.LessThanOrEqualTO = 25;
F7Parser.Equal = 26;
F7Parser.NotEqual = 27;
F7Parser.Ampersand = 28;
F7Parser.Dollar = 29;
F7Parser.Underscore = 30;
F7Parser.WS = 31;

F7Parser.RULE_start = 0;
F7Parser.RULE_block = 1;
F7Parser.RULE_expression = 2;
F7Parser.RULE_atom = 3;
F7Parser.RULE_range = 4;
F7Parser.RULE_biRange = 5;
F7Parser.RULE_uniRange = 6;
F7Parser.RULE_columnWiseBiRange = 7;
F7Parser.RULE_columnWiseWithRowOffsetFirstBiRange = 8;
F7Parser.RULE_columnWiseWithRowOffsetLastBiRange = 9;
F7Parser.RULE_rowWiseBiRange = 10;
F7Parser.RULE_rowWiseWithColumnOffsetFirstBiRange = 11;
F7Parser.RULE_rowWiseWithColumnOffsetLastBiRange = 12;
F7Parser.RULE_arguments = 13;
F7Parser.RULE_gridName = 14;
F7Parser.RULE_identifier = 15;
F7Parser.RULE_comparisonOperator = 16;

function StartContext(parser, parent, invokingState) {
  if (parent === undefined) {
    parent = null;
  }
  if (invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = F7Parser.RULE_start;
  return this;
}

StartContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StartContext.prototype.constructor = StartContext;

StartContext.prototype.block = function () {
  return this.getTypedRuleContext(BlockContext, 0);
};

StartContext.prototype.EOF = function () {
  return this.getToken(F7Parser.EOF, 0);
};

StartContext.prototype.enterRule = function (listener) {
  if (listener instanceof F7Listener) {
    listener.enterStart(this);
  }
};

StartContext.prototype.exitRule = function (listener) {
  if (listener instanceof F7Listener) {
    listener.exitStart(this);
  }
};

StartContext.prototype.accept = function (visitor) {
  if (visitor instanceof F7Visitor) {
    return visitor.visitStart(this);
  } else {
    return visitor.visitChildren(this);
  }
};

F7Parser.StartContext = StartContext;

F7Parser.prototype.start = function () {
  var localctx = new StartContext(this, this._ctx, this.state);
  this.enterRule(localctx, 0, F7Parser.RULE_start);
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 34;
    this.block();
    this.state = 35;
    this.match(F7Parser.EOF);
  } catch (re) {
    if (re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};

function BlockContext(parser, parent, invokingState) {
  if (parent === undefined) {
    parent = null;
  }
  if (invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = F7Parser.RULE_block;
  return this;
}

BlockContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
BlockContext.prototype.constructor = BlockContext;

BlockContext.prototype.expression = function () {
  return this.getTypedRuleContext(ExpressionContext, 0);
};

BlockContext.prototype.enterRule = function (listener) {
  if (listener instanceof F7Listener) {
    listener.enterBlock(this);
  }
};

BlockContext.prototype.exitRule = function (listener) {
  if (listener instanceof F7Listener) {
    listener.exitBlock(this);
  }
};

BlockContext.prototype.accept = function (visitor) {
  if (visitor instanceof F7Visitor) {
    return visitor.visitBlock(this);
  } else {
    return visitor.visitChildren(this);
  }
};

F7Parser.BlockContext = BlockContext;

F7Parser.prototype.block = function () {
  var localctx = new BlockContext(this, this._ctx, this.state);
  this.enterRule(localctx, 2, F7Parser.RULE_block);
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 37;
    this.expression(0);
  } catch (re) {
    if (re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};

function ExpressionContext(parser, parent, invokingState) {
  if (parent === undefined) {
    parent = null;
  }
  if (invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = F7Parser.RULE_expression;
  return this;
}

ExpressionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ExpressionContext.prototype.constructor = ExpressionContext;

ExpressionContext.prototype.copyFrom = function (ctx) {
  antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};

function UnaryPercentExpressionContext(parser, ctx) {
  ExpressionContext.call(this, parser);
  ExpressionContext.prototype.copyFrom.call(this, ctx);
  return this;
}

UnaryPercentExpressionContext.prototype = Object.create(ExpressionContext.prototype);
UnaryPercentExpressionContext.prototype.constructor = UnaryPercentExpressionContext;

F7Parser.UnaryPercentExpressionContext = UnaryPercentExpressionContext;

UnaryPercentExpressionContext.prototype.expression = function () {
  return this.getTypedRuleContext(ExpressionContext, 0);
};

UnaryPercentExpressionContext.prototype.Percent = function (i) {
  if (i === undefined) {
    i = null;
  }
  if (i === null) {
    return this.getTokens(F7Parser.Percent);
  } else {
    return this.getToken(F7Parser.Percent, i);
  }
};

UnaryPercentExpressionContext.prototype.enterRule = function (listener) {
  if (listener instanceof F7Listener) {
    listener.enterUnaryPercentExpression(this);
  }
};

UnaryPercentExpressionContext.prototype.exitRule = function (listener) {
  if (listener instanceof F7Listener) {
    listener.exitUnaryPercentExpression(this);
  }
};

UnaryPercentExpressionContext.prototype.accept = function (visitor) {
  if (visitor instanceof F7Visitor) {
    return visitor.visitUnaryPercentExpression(this);
  } else {
    return visitor.visitChildren(this);
  }
};

function UnaryMinusExpressionContext(parser, ctx) {
  ExpressionContext.call(this, parser);
  ExpressionContext.prototype.copyFrom.call(this, ctx);
  return this;
}

UnaryMinusExpressionContext.prototype = Object.create(ExpressionContext.prototype);
UnaryMinusExpressionContext.prototype.constructor = UnaryMinusExpressionContext;

F7Parser.UnaryMinusExpressionContext = UnaryMinusExpressionContext;

UnaryMinusExpressionContext.prototype.Minus = function () {
  return this.getToken(F7Parser.Minus, 0);
};

UnaryMinusExpressionContext.prototype.expression = function () {
  return this.getTypedRuleContext(ExpressionContext, 0);
};
UnaryMinusExpressionContext.prototype.enterRule = function (listener) {
  if (listener instanceof F7Listener) {
    listener.enterUnaryMinusExpression(this);
  }
};

UnaryMinusExpressionContext.prototype.exitRule = function (listener) {
  if (listener instanceof F7Listener) {
    listener.exitUnaryMinusExpression(this);
  }
};

UnaryMinusExpressionContext.prototype.accept = function (visitor) {
  if (visitor instanceof F7Visitor) {
    return visitor.visitUnaryMinusExpression(this);
  } else {
    return visitor.visitChildren(this);
  }
};

function PowerExpressionContext(parser, ctx) {
  ExpressionContext.call(this, parser);
  this.left = null; // ExpressionContext;
  this.op = null; // Token;
  this.right = null; // ExpressionContext;
  ExpressionContext.prototype.copyFrom.call(this, ctx);
  return this;
}

PowerExpressionContext.prototype = Object.create(ExpressionContext.prototype);
PowerExpressionContext.prototype.constructor = PowerExpressionContext;

F7Parser.PowerExpressionContext = PowerExpressionContext;

PowerExpressionContext.prototype.expression = function (i) {
  if (i === undefined) {
    i = null;
  }
  if (i === null) {
    return this.getTypedRuleContexts(ExpressionContext);
  } else {
    return this.getTypedRuleContext(ExpressionContext, i);
  }
};

PowerExpressionContext.prototype.Power = function () {
  return this.getToken(F7Parser.Power, 0);
};
PowerExpressionContext.prototype.enterRule = function (listener) {
  if (listener instanceof F7Listener) {
    listener.enterPowerExpression(this);
  }
};

PowerExpressionContext.prototype.exitRule = function (listener) {
  if (listener instanceof F7Listener) {
    listener.exitPowerExpression(this);
  }
};

PowerExpressionContext.prototype.accept = function (visitor) {
  if (visitor instanceof F7Visitor) {
    return visitor.visitPowerExpression(this);
  } else {
    return visitor.visitChildren(this);
  }
};

function UnaryPlusExpressionContext(parser, ctx) {
  ExpressionContext.call(this, parser);
  ExpressionContext.prototype.copyFrom.call(this, ctx);
  return this;
}

UnaryPlusExpressionContext.prototype = Object.create(ExpressionContext.prototype);
UnaryPlusExpressionContext.prototype.constructor = UnaryPlusExpressionContext;

F7Parser.UnaryPlusExpressionContext = UnaryPlusExpressionContext;

UnaryPlusExpressionContext.prototype.Plus = function () {
  return this.getToken(F7Parser.Plus, 0);
};

UnaryPlusExpressionContext.prototype.expression = function () {
  return this.getTypedRuleContext(ExpressionContext, 0);
};
UnaryPlusExpressionContext.prototype.enterRule = function (listener) {
  if (listener instanceof F7Listener) {
    listener.enterUnaryPlusExpression(this);
  }
};

UnaryPlusExpressionContext.prototype.exitRule = function (listener) {
  if (listener instanceof F7Listener) {
    listener.exitUnaryPlusExpression(this);
  }
};

UnaryPlusExpressionContext.prototype.accept = function (visitor) {
  if (visitor instanceof F7Visitor) {
    return visitor.visitUnaryPlusExpression(this);
  } else {
    return visitor.visitChildren(this);
  }
};

function AtomExpressionContext(parser, ctx) {
  ExpressionContext.call(this, parser);
  ExpressionContext.prototype.copyFrom.call(this, ctx);
  return this;
}

AtomExpressionContext.prototype = Object.create(ExpressionContext.prototype);
AtomExpressionContext.prototype.constructor = AtomExpressionContext;

F7Parser.AtomExpressionContext = AtomExpressionContext;

AtomExpressionContext.prototype.atom = function () {
  return this.getTypedRuleContext(AtomContext, 0);
};
AtomExpressionContext.prototype.enterRule = function (listener) {
  if (listener instanceof F7Listener) {
    listener.enterAtomExpression(this);
  }
};

AtomExpressionContext.prototype.exitRule = function (listener) {
  if (listener instanceof F7Listener) {
    listener.exitAtomExpression(this);
  }
};

AtomExpressionContext.prototype.accept = function (visitor) {
  if (visitor instanceof F7Visitor) {
    return visitor.visitAtomExpression(this);
  } else {
    return visitor.visitChildren(this);
  }
};

function AdditiveExpressionContext(parser, ctx) {
  ExpressionContext.call(this, parser);
  this.left = null; // ExpressionContext;
  this.op = null; // Token;
  this.right = null; // ExpressionContext;
  ExpressionContext.prototype.copyFrom.call(this, ctx);
  return this;
}

AdditiveExpressionContext.prototype = Object.create(ExpressionContext.prototype);
AdditiveExpressionContext.prototype.constructor = AdditiveExpressionContext;

F7Parser.AdditiveExpressionContext = AdditiveExpressionContext;

AdditiveExpressionContext.prototype.expression = function (i) {
  if (i === undefined) {
    i = null;
  }
  if (i === null) {
    return this.getTypedRuleContexts(ExpressionContext);
  } else {
    return this.getTypedRuleContext(ExpressionContext, i);
  }
};

AdditiveExpressionContext.prototype.Plus = function () {
  return this.getToken(F7Parser.Plus, 0);
};

AdditiveExpressionContext.prototype.Minus = function () {
  return this.getToken(F7Parser.Minus, 0);
};
AdditiveExpressionContext.prototype.enterRule = function (listener) {
  if (listener instanceof F7Listener) {
    listener.enterAdditiveExpression(this);
  }
};

AdditiveExpressionContext.prototype.exitRule = function (listener) {
  if (listener instanceof F7Listener) {
    listener.exitAdditiveExpression(this);
  }
};

AdditiveExpressionContext.prototype.accept = function (visitor) {
  if (visitor instanceof F7Visitor) {
    return visitor.visitAdditiveExpression(this);
  } else {
    return visitor.visitChildren(this);
  }
};

function RelationalExpressionContext(parser, ctx) {
  ExpressionContext.call(this, parser);
  this.left = null; // ExpressionContext;
  this.op = null; // ComparisonOperatorContext;
  this.right = null; // ExpressionContext;
  ExpressionContext.prototype.copyFrom.call(this, ctx);
  return this;
}

RelationalExpressionContext.prototype = Object.create(ExpressionContext.prototype);
RelationalExpressionContext.prototype.constructor = RelationalExpressionContext;

F7Parser.RelationalExpressionContext = RelationalExpressionContext;

RelationalExpressionContext.prototype.expression = function (i) {
  if (i === undefined) {
    i = null;
  }
  if (i === null) {
    return this.getTypedRuleContexts(ExpressionContext);
  } else {
    return this.getTypedRuleContext(ExpressionContext, i);
  }
};

RelationalExpressionContext.prototype.comparisonOperator = function () {
  return this.getTypedRuleContext(ComparisonOperatorContext, 0);
};
RelationalExpressionContext.prototype.enterRule = function (listener) {
  if (listener instanceof F7Listener) {
    listener.enterRelationalExpression(this);
  }
};

RelationalExpressionContext.prototype.exitRule = function (listener) {
  if (listener instanceof F7Listener) {
    listener.exitRelationalExpression(this);
  }
};

RelationalExpressionContext.prototype.accept = function (visitor) {
  if (visitor instanceof F7Visitor) {
    return visitor.visitRelationalExpression(this);
  } else {
    return visitor.visitChildren(this);
  }
};

function RangeExpressionContext(parser, ctx) {
  ExpressionContext.call(this, parser);
  this.separator = null; // Token;
  ExpressionContext.prototype.copyFrom.call(this, ctx);
  return this;
}

RangeExpressionContext.prototype = Object.create(ExpressionContext.prototype);
RangeExpressionContext.prototype.constructor = RangeExpressionContext;

F7Parser.RangeExpressionContext = RangeExpressionContext;

RangeExpressionContext.prototype.atom = function (i) {
  if (i === undefined) {
    i = null;
  }
  if (i === null) {
    return this.getTypedRuleContexts(AtomContext);
  } else {
    return this.getTypedRuleContext(AtomContext, i);
  }
};

RangeExpressionContext.prototype.Colon = function (i) {
  if (i === undefined) {
    i = null;
  }
  if (i === null) {
    return this.getTokens(F7Parser.Colon);
  } else {
    return this.getToken(F7Parser.Colon, i);
  }
};

RangeExpressionContext.prototype.enterRule = function (listener) {
  if (listener instanceof F7Listener) {
    listener.enterRangeExpression(this);
  }
};

RangeExpressionContext.prototype.exitRule = function (listener) {
  if (listener instanceof F7Listener) {
    listener.exitRangeExpression(this);
  }
};

RangeExpressionContext.prototype.accept = function (visitor) {
  if (visitor instanceof F7Visitor) {
    return visitor.visitRangeExpression(this);
  } else {
    return visitor.visitChildren(this);
  }
};

function MultiplicationExpressionContext(parser, ctx) {
  ExpressionContext.call(this, parser);
  this.left = null; // ExpressionContext;
  this.op = null; // Token;
  this.right = null; // ExpressionContext;
  ExpressionContext.prototype.copyFrom.call(this, ctx);
  return this;
}

MultiplicationExpressionContext.prototype = Object.create(ExpressionContext.prototype);
MultiplicationExpressionContext.prototype.constructor = MultiplicationExpressionContext;

F7Parser.MultiplicationExpressionContext = MultiplicationExpressionContext;

MultiplicationExpressionContext.prototype.expression = function (i) {
  if (i === undefined) {
    i = null;
  }
  if (i === null) {
    return this.getTypedRuleContexts(ExpressionContext);
  } else {
    return this.getTypedRuleContext(ExpressionContext, i);
  }
};

MultiplicationExpressionContext.prototype.Multiply = function () {
  return this.getToken(F7Parser.Multiply, 0);
};

MultiplicationExpressionContext.prototype.Divide = function () {
  return this.getToken(F7Parser.Divide, 0);
};
MultiplicationExpressionContext.prototype.enterRule = function (listener) {
  if (listener instanceof F7Listener) {
    listener.enterMultiplicationExpression(this);
  }
};

MultiplicationExpressionContext.prototype.exitRule = function (listener) {
  if (listener instanceof F7Listener) {
    listener.exitMultiplicationExpression(this);
  }
};

MultiplicationExpressionContext.prototype.accept = function (visitor) {
  if (visitor instanceof F7Visitor) {
    return visitor.visitMultiplicationExpression(this);
  } else {
    return visitor.visitChildren(this);
  }
};

function ConcatExpressionContext(parser, ctx) {
  ExpressionContext.call(this, parser);
  this.left = null; // ExpressionContext;
  this.op = null; // Token;
  this.right = null; // ExpressionContext;
  ExpressionContext.prototype.copyFrom.call(this, ctx);
  return this;
}

ConcatExpressionContext.prototype = Object.create(ExpressionContext.prototype);
ConcatExpressionContext.prototype.constructor = ConcatExpressionContext;

F7Parser.ConcatExpressionContext = ConcatExpressionContext;

ConcatExpressionContext.prototype.expression = function (i) {
  if (i === undefined) {
    i = null;
  }
  if (i === null) {
    return this.getTypedRuleContexts(ExpressionContext);
  } else {
    return this.getTypedRuleContext(ExpressionContext, i);
  }
};

ConcatExpressionContext.prototype.Ampersand = function () {
  return this.getToken(F7Parser.Ampersand, 0);
};
ConcatExpressionContext.prototype.enterRule = function (listener) {
  if (listener instanceof F7Listener) {
    listener.enterConcatExpression(this);
  }
};

ConcatExpressionContext.prototype.exitRule = function (listener) {
  if (listener instanceof F7Listener) {
    listener.exitConcatExpression(this);
  }
};

ConcatExpressionContext.prototype.accept = function (visitor) {
  if (visitor instanceof F7Visitor) {
    return visitor.visitConcatExpression(this);
  } else {
    return visitor.visitChildren(this);
  }
};

F7Parser.prototype.expression = function (_p) {
  if (_p === undefined) {
    _p = 0;
  }
  var _parentctx = this._ctx;
  var _parentState = this.state;
  var localctx = new ExpressionContext(this, this._ctx, _parentState);
  var _prevctx = localctx;
  var _startState = 4;
  this.enterRecursionRule(localctx, 4, F7Parser.RULE_expression, _p);
  var _la = 0; // Token type
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 52;
    this._errHandler.sync(this);
    var la_ = this._interp.adaptivePredict(this._input, 1, this._ctx);
    switch (la_) {
      case 1:
        localctx = new UnaryMinusExpressionContext(this, localctx);
        this._ctx = localctx;
        _prevctx = localctx;

        this.state = 40;
        this.match(F7Parser.Minus);
        this.state = 41;
        this.expression(10);
        break;

      case 2:
        localctx = new UnaryPlusExpressionContext(this, localctx);
        this._ctx = localctx;
        _prevctx = localctx;
        this.state = 42;
        this.match(F7Parser.Plus);
        this.state = 43;
        this.expression(9);
        break;

      case 3:
        localctx = new AtomExpressionContext(this, localctx);
        this._ctx = localctx;
        _prevctx = localctx;
        this.state = 44;
        this.atom();
        break;

      case 4:
        localctx = new RangeExpressionContext(this, localctx);
        this._ctx = localctx;
        _prevctx = localctx;
        this.state = 45;
        this.atom();
        this.state = 48;
        this._errHandler.sync(this);
        var _alt = 1;
        do {
          switch (_alt) {
            case 1:
              this.state = 46;
              localctx.separator = this.match(F7Parser.Colon);
              this.state = 47;
              this.atom();
              break;
            default:
              throw new antlr4.error.NoViableAltException(this);
          }
          this.state = 50;
          this._errHandler.sync(this);
          _alt = this._interp.adaptivePredict(this._input, 0, this._ctx);
        } while (_alt != 2 && _alt != antlr4.atn.ATN.INVALID_ALT_NUMBER);
        break;
    }
    this._ctx.stop = this._input.LT(-1);
    this.state = 78;
    this._errHandler.sync(this);
    var _alt = this._interp.adaptivePredict(this._input, 4, this._ctx);
    while (_alt != 2 && _alt != antlr4.atn.ATN.INVALID_ALT_NUMBER) {
      if (_alt === 1) {
        if (this._parseListeners !== null) {
          this.triggerExitRuleEvent();
        }
        _prevctx = localctx;
        this.state = 76;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input, 3, this._ctx);
        switch (la_) {
          case 1:
            localctx = new PowerExpressionContext(
              this,
              new ExpressionContext(this, _parentctx, _parentState)
            );
            localctx.left = _prevctx;
            this.pushNewRecursionContext(localctx, _startState, F7Parser.RULE_expression);
            this.state = 54;
            if (!this.precpred(this._ctx, 7)) {
              throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 7)");
            }
            this.state = 55;
            localctx.op = this.match(F7Parser.Power);
            this.state = 56;
            localctx.right = this.expression(8);
            break;

          case 2:
            localctx = new MultiplicationExpressionContext(
              this,
              new ExpressionContext(this, _parentctx, _parentState)
            );
            localctx.left = _prevctx;
            this.pushNewRecursionContext(localctx, _startState, F7Parser.RULE_expression);
            this.state = 57;
            if (!this.precpred(this._ctx, 6)) {
              throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 6)");
            }
            this.state = 58;
            localctx.op = this._input.LT(1);
            _la = this._input.LA(1);
            if (!(_la === F7Parser.Divide || _la === F7Parser.Multiply)) {
              localctx.op = this._errHandler.recoverInline(this);
            } else {
              this._errHandler.reportMatch(this);
              this.consume();
            }
            this.state = 59;
            localctx.right = this.expression(7);
            break;
